--- a/index.html
+++ b/index.html
@@ -312,9 +312,9 @@
           Department of Informatics · Data &amp; Web Science Lab (Datalab)
         </div>
 
-        <div class="link-row">
+        <!-- <div class="link-row">
           <a href="cv.pdf" class="cv-button">Download CV (PDF)</a>
-        </div>
+        </div> -->
 
         <div class="link-row">
           <strong>Profiles:</strong>
@@ -611,7 +611,7 @@
         </section>
 
         <!-- CV -->
-        <section id="cv">
+        <!-- <section id="cv">
           <h2 class="section-title">Curriculum Vitae</h2>
           <p>
             You can download my full CV here:
@@ -621,7 +621,7 @@
             The CV includes additional details on coursework, responsibilities within research projects,
             skills, and other activities.
           </p>
-        </section>
+        </section> -->
 
         <!-- CONTACT -->
         <section id="contact">
