--- a/index.html
+++ b/index.html
@@ -367,8 +367,9 @@
         
           <!-- ResearchGate -->
           <a href="https://www.researchgate.net/profile/Styliani_Kyrama?ev=prf_overview" class="icon" title="ResearchGate">
-            <svg viewBox="0 0 24 24" fill="currentColor">
-              <path d="M20.388 3H3.61A1.61 1.61 0 0 0 2 4.61v14.78A1.61 1.61 0 0 0 3.61 21h16.78A1.61 1.61 0 0 0 22 19.39V4.61A1.61 1.61 0 0 0 20.388 3zM9.75 17.25H7.5V10.5h2.25v6.75zm-1.125-8.063a1.312 1.312 0 1 1 0-2.625 1.312 1.312 0 0 1 0 2.625zM18 17.25h-2.25v-3.45c0-.815-.278-1.35-.97-1.35-.53 0-.84.36-.98.71-.05.12-.06.29-.06.46v3.63H11.5v-6.75h2.17v.92h.03c.3-.47.84-1.12 1.98-1.12 1.44 0 2.32.94 2.32 2.97v4z"/>
+            <svg viewBox="0 0 512 512" fill="currentColor">
+              <text x="140" y="350" font-family="Georgia, serif" font-size="300" font-weight="400">R</text>
+              <text x="330" y="180" font-family="Georgia, serif" font-size="160" font-weight="400">G</text>
             </svg>
           </a>
         
